RESOLVED FIXED219411
Fix for multiple LayoutTests/accessibility tests in isolated tree mode that rely on PlainTextRange.
https://bugs.webkit.org/show_bug.cgi?id=219411
Summary Fix for multiple LayoutTests/accessibility tests in isolated tree mode that r...
Andres Gonzalez
Reported 2020-12-01 15:30:13 PST
Fix for multiple LayoutTests/accessibility tests in isolated tree mode that rely on PlainTextRange.
Attachments
Patch (7.07 KB, patch)
2020-12-01 15:49 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-12-01 15:49:51 PST
EWS
Comment 2 2020-12-01 16:44:47 PST
Committed r270331: <https://trac.webkit.org/changeset/270331> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415171 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-01 16:45:21 PST
Note You need to log in before you can comment on or make changes to this bug.