Fix for multiple LayoutTests/accessibility tests in isolated tree mode that rely on PlainTextRange. https://bugs.webkit.org/show_bug.cgi?id=219411

Reviewed by Chris Fleizach.

Tests:
accessibility/insert-newline.html
accessibility/mac/input-string-for-range-crash.html
accessibility/mac/range-for-contenteditable-newline.html
accessibility/mac/range-for-line-textarea.html
accessibility/set-selected-text-range-after-newline.html
accessibility/textarea-line-for-index.html
accessibility/mac/select-element-selection-with-optgroups.html

Implementation of AXIsolatedObject methods that take or return PlainTextRanges.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::selectedTextRange const):
(WebCore::AXIsolatedObject::doAXRangeForLine const):
(WebCore::AXIsolatedObject::doAXStringForRange const):
(WebCore::AXIsolatedObject::doAXRangeForPosition const):
(WebCore::AXIsolatedObject::doAXRangeForIndex const):
(WebCore::AXIsolatedObject::doAXStyleRangeForIndex const):
(WebCore::AXIsolatedObject::doAXBoundsForRange const):
(WebCore::AXIsolatedObject::doAXLineForIndex):
* accessibility/isolatedtree/AXIsolatedObject.h:


Canonical link: https://commits.webkit.org/232025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270331 268f45cc-cd09-0410-ab3c-d52691b4dbfc